# endee

AI Software Lifecycle Risk and Auto-Fix System/: .gitignore  README.md
AI Software Lifecycle Risk and Auto-Fix System/backend/: .env.example  endee_client.py  lifecycle.py  main.py  rag_enginge.py  recommendation.py  requirements.txt  risk_engine.py  seed_data.json  severity_engine.py
AI Software Lifecycle Risk and Auto-Fix System/frontend/: .env.example
AI Software Lifecycle Risk and Auto-Fix System/frontend/components/: Dashboard.js  ExampleCards.js  Header.js  InputPanel.js
AI Software Lifecycle Risk and Auto-Fix System/frontend/src/: Api.js  App.js  Styles.css
AI System Reliability Copilot/backend/: endee_client.py  lifecycle.py  main.py  rag_engine.py  requirements.txt  risk_engine.py  seed.py
AI System Reliability Copilot/data/: seed_data.json
AI System Reliability Copilot/frontend/: App.js
ENDEE/: CMakeLists.txt
ENDEE/src/: main.cpp
ENDEE/src/filter/: category_index.hpp
ENDEE/src/utils/: settings.hpp
docs/: memory_management.md
endee/: CMakeLists.txt  Dockerfile  install.sh  run.sh
endee/.github/workflows/: benchmark_dense_setup.py  correctness_benchmark_menu.yml  correctness_benchmarking.yml  linting.yml
endee/docs/: logs.md  sparse.md
endee/src/core/: ndd.hpp
endee/src/filter/: filter.hpp
endee/src/hnsw/: hnswalg.h
endee/src/storage/: backup_store.hpp
endee/src/utils/system_sanity/: system_sanity.cpp
src/server/: auth.hpp
src/sparse/: inverted_index.cpp  sparse_storage.hpp
src/storage/: vector_storage.hpp
src/utils/system_sanity/: system_sanity.hpp
